--- a/schema/templates/schema/enlarger_detail.html
+++ b/schema/templates/schema/enlarger_detail.html
@@ -5,7 +5,7 @@
   {% if object.manufacturer is not None %}
   <tr>
     <td>Manufacturer</td>
-    <td>{% if object.manufacturer is not None %}<a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}</a>{% endif %}</td>
+    <td><a href="{% url 'manufacturer-detail' object.manufacturer.slug %}">{{ object.manufacturer }}</a></td>
   </tr>
   {% endif %}
   <tr>
@@ -15,7 +15,7 @@
   {% if object.negative_size is not None %}
   <tr>
     <td>Negative size</td>
-    <td>{% if object.negative_size is not None %}<a href="{% url 'negativesize-detail' object.negative_size.slug %}">{{ object.negative_size }}</a>{% endif %}</td>
+    <td><a href="{% url 'negativesize-detail' object.negative_size.slug %}">{{ object.negative_size }}</a></td>
   </tr>
   {% endif %}
   {% if object.type is not None %}
