--- a/schema/templates/schema/film_detail.html
+++ b/schema/templates/schema/film_detail.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 <table class="table table-hover">
+  {% if object.filmstock is not None %}
   <tr>
     <td>Filmstock</td>
-    <td>{% if object.filmstock is not None %}<a
-        href="{% url 'filmstock-detail' object.filmstock.slug %}">{{ object.filmstock }}</a>{% endif %}</td>
+    <td><a href="{% url 'filmstock-detail' object.filmstock.slug %}">{{ object.filmstock }}</a></td>
   </tr>
+  {% endif %}
   {% if object.exposed_at is not None %}
   <tr>
     <td>Exposed at</td>
@@ -16,8 +17,7 @@
   {% if object.format is not None %}
   <tr>
     <td>Film format</td>
-    <td>{% if object.format is not None %}<a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a>{% endif %}
-    </td>
+    <td><a href="{% url 'format-detail' object.format.id %}">{{ object.format }}</a></td>
   </tr>
   {% endif %}
   {% if object.date_loaded is not None %}
@@ -35,8 +35,7 @@
   {% if object.camera is not None %}
   <tr>
     <td>Camera</td>
-    <td>{% if object.camera is not None %}<a href="{% url 'camera-detail' object.camera.id %}">{{ object.camera }}</a>{% endif %}
-    </td>
+    <td><a href="{% url 'camera-detail' object.camera.id %}">{{ object.camera }}</a></td>
   </tr>
   {% endif %}
   {% if object.title is not None %}
@@ -54,8 +53,7 @@
   {% if object.developer is not None %}
   <tr>
     <td>Developer</td>
-    <td>{% if object.developer is not None %}<a
-        href="{% url 'developer-detail' object.developer.slug %}">{{ object.developer }}</a>{% endif %}</td>
+    <td><a href="{% url 'developer-detail' object.developer.slug %}">{{ object.developer }}</a></td>
   </tr>
   {% endif %}
   {% if object.directory is not None %}
@@ -130,16 +128,18 @@
     <td>{{ object.price }}</td>
   </tr>
   {% endif %}
+  {% if object.processed_by is not None %}
   <tr>
     <td>Processed by</td>
-    <td>{% if object.processed_by is not None %}<a
-        href="{% url 'person-detail' object.processed_by.id %}">{{ object.processed_by }}</a>{% endif %}</td>
+    <td><a href="{% url 'person-detail' object.processed_by.id %}">{{ object.processed_by }}</a></td>
   </tr>
+  {% endif %}
+  {% if object.archive is not None %}
   <tr>
     <td>Archive</td>
-    <td>{% if object.archive is not None %}<a
-        href="{% url 'archive-detail' object.archive.id %}">{{ object.archive }}</a>{% endif %}</td>
+    <td><a href="{% url 'archive-detail' object.archive.id %}">{{ object.archive }}</a></td>
   </tr>
+  {% endif %}
 </table>
 
 <a data-toggle="collapse" href="#collapseNegatives" role="button" aria-expanded="false" aria-controls="collapseNegatives">
