--- a/schema/templates/schema/mountadapter_detail.html
+++ b/schema/templates/schema/mountadapter_detail.html
@@ -3,14 +3,18 @@
 
 {% block content %}
 <table class="table table-hover">
+  {% if object.camera_mount is not None %}
   <tr>
     <td>Camera mount</td>
-    <td>{% if object.camera_mount is not None %}<a href="{% url 'mount-detail' object.camera_mount.slug %}">{{ object.camera_mount }}</a>{% endif %}</td>
+    <td><a href="{% url 'mount-detail' object.camera_mount.slug %}">{{ object.camera_mount }}</a></td>
   </tr>
+  {% endif %}
+  {% if object.lens_mount is not None %}
   <tr>
     <td>Lens mount</td>
-    <td>{% if object.lens_mount is not None %}<a href="{% url 'mount-detail' object.lens_mount.slug %}">{{ object.lens_mount }}</a>{% endif %}</td>
+    <td><a href="{% url 'mount-detail' object.lens_mount.slug %}">{{ object.lens_mount }}</a></td>
   </tr>
+  {% endif %}
   {% if object.has_optics is not None %}
   <tr>
     <td>Has optics</td>
