--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -260,7 +260,7 @@ zoom
   {% endif %}
   {% if object.x_sync %}
   <tr>
-    <td>X-sync spped</td>
+    <td>X-sync speed</td>
     <td>{{ object.x_sync }}</td>
   </tr>
   {% endif %}
