--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -97,7 +97,7 @@
             </li>
             {% endif %}
         </ul>
-        <form class="form-inline my-2 my-lg-0" action="{% url 'watson:search' %}">
+        <form class="form-inline my-2 my-lg-0" action="{% url 'search' %}">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q" value="{{request.GET.q}}">
             <button class="btn btn-light my-2 my-sm-0" type="submit">Search</button>
         </form>
