Add note about CollectiBlend

--- a/help/templates/about.html
+++ b/help/templates/about.html
@@ -47,6 +47,10 @@
     between equipment and images. Relational data allows CameraHub to do things like show you all lenses that work with
     a particular camera, or all pictures you took with a particular lens.</p>
 
+<p>Another popular site is <a href="https://collectiblend.com/">CollectiBlend</a>, which offers a more data-oriented
+    experience. However, it prioritises pricing information and doesn't include much data about the cameras and
+    lenses themselves.</p>
+
 <p>CameraHub also offers unique features for cataloguing films, negatives, prints and scans.</p>
 
 <h2>Community</h2>
