Add to collection action for cameras

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -372,3 +372,10 @@ zoom
   </table>
 </div>
 {% endblock %}
+
+{% block moreactions %}
+<form action="{% url 'camera-create' %}">
+  <input type="hidden" name="cameramodel" value="{{ object.id }}">
+  <button class="btn btn-primary" type="submit">Add to collection</button>
+</form>
+{% endblock %}
