Add to collection action for lenses

--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -237,3 +237,10 @@
   </table>
 </div>
 {% endblock %}
+
+{% block moreactions %}
+<form action="{% url 'lens-create' %}">
+  <input type="hidden" name="lensmodel" value="{{ object.id }}">
+  <button class="btn btn-primary" type="submit">Add to collection</button>
+</form>
+{% endblock %}
