Scrap folding sections

--- a/schema/templates/detail.html
+++ b/schema/templates/detail.html
@@ -4,17 +4,11 @@
 {% block heading %}{% include "heading.html" %}{%endblock%}
 
 {% block subheading %}<h4>{{ object }}<a href="{{ object.get_absolute_url }}/update"><img
-    src="{% static "svg/edit.svg" %}" width="20" height="20" alt="Edit"></a></h4>{%endblock%}
+      src="{% static "svg/edit.svg" %}" width="20" height="20" alt="Edit"></a></h4>{%endblock%}
 
 {% block content %}{%endblock%}
 
 {% block actions %}
-<a data-toggle="collapse" href="#collapseActions" role="button" aria-expanded="false" aria-controls="collapseActions">
-  Actions
-</a>
-<div class="collapse" id="collapseActions">
-  <ul>
-    {% block moreactions %}{%endblock%}
-  </ul>
-</div>
+<h4>Actions</h4>
+{% block moreactions %}{%endblock%}
 {%endblock%}
