--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -30,7 +30,8 @@
   {% else %}
   <tr>
     <td>Lens</td>
-    <td>{% if object.lens_manufacturer is not None %}{{ object.lens_manufacturer }} {% endif %}{{ object.lens_model_name }}
+    <td>{% if object.lens_manufacturer is not None %}{{ object.lens_manufacturer }}
+      {% endif %}{{ object.lens_model_name }}
     </td>
   </tr>
   <!--
@@ -331,46 +332,43 @@ zoom
   {% endif %}
 </table>
 
-<a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false" aria-controls="collapseCameras">
-  Cameras</a>
-<div class="collapse" id="collapseCameras">
-  <table class="table table-hover">
-    <tr>
-      <th>Acquired</th>
-      <th>cost</th>
-      <th>serial</th>
-      <th>datecode</th>
-      <th>manufactured</th>
-      <th>own</th>
-      <th>lens</th>
-      <th>notes</th>
-      <th>lost</th>
-      <th>lost_price</th>
-      <th>source</th>
-      <th>condition</th>
-      <th>condition_notes</th>
-      <th>display_lens</th>
-    </tr>
-    {% for camera in cameramodel.camera_set.all %}
-    <tr>
-      <td>{{ camera.acquired }}</td>
-      <td>{{ camera.cost }}</td>
-      <td><code>{{ camera.serial }}</code></td>
-      <td><code>{{ camera.datecode }}</code></td>
-      <td>{{ camera.manufactured }}</td>
-      <td>{{ camera.own }}</td>
-      <td>{{ camera.lens }}</td>
-      <td>{{ camera.notes }}</td>
-      <td>{{ camera.lost }}</td>
-      <td>{{ camera.lost_price }}</td>
-      <td>{{ camera.source }}</td>
-      <td>{{ camera.condition }}</td>
-      <td>{{ camera.condition_notes }}</td>
-      <td>{{ camera.display_lens }}</td>
-    </tr>
-    {% endfor %}
-  </table>
-</div>
+<h4>Cameras</h4>
+<table class="table table-hover">
+  <tr>
+    <th>Acquired</th>
+    <th>cost</th>
+    <th>serial</th>
+    <th>datecode</th>
+    <th>manufactured</th>
+    <th>own</th>
+    <th>lens</th>
+    <th>notes</th>
+    <th>lost</th>
+    <th>lost_price</th>
+    <th>source</th>
+    <th>condition</th>
+    <th>condition_notes</th>
+    <th>display_lens</th>
+  </tr>
+  {% for camera in cameramodel.camera_set.all %}
+  <tr>
+    <td>{{ camera.acquired }}</td>
+    <td>{{ camera.cost }}</td>
+    <td><code>{{ camera.serial }}</code></td>
+    <td><code>{{ camera.datecode }}</code></td>
+    <td>{{ camera.manufactured }}</td>
+    <td>{{ camera.own }}</td>
+    <td>{{ camera.lens }}</td>
+    <td>{{ camera.notes }}</td>
+    <td>{{ camera.lost }}</td>
+    <td>{{ camera.lost_price }}</td>
+    <td>{{ camera.source }}</td>
+    <td>{{ camera.condition }}</td>
+    <td>{{ camera.condition_notes }}</td>
+    <td>{{ camera.display_lens }}</td>
+  </tr>
+  {% endfor %}
+</table>
 {% endblock %}
 
 {% block moreactions %}
