Hide Camera section if there are no cameras

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -440,6 +440,7 @@
   {% endif %}
 </table>
 
+{% if cameramodel.camera_set.all %}
 <h4>Cameras</h4>
 <table class="table table-hover">
   <tr>
@@ -473,6 +474,7 @@
   </tr>
   {% endfor %}
 </table>
+{% endif %}
 {% endblock %}
 
 {% block moreactions %}
