Add tags to all public models

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -426,6 +426,12 @@
     <td><a href="{{ object.url }}">{{ object.url }}</a></td>
   </tr>
   {% endif %}
+  {% if object.tags is not None %}
+  <tr>
+    <td>Tags</td>
+    <td>{{ object.tags.all|join:", " }}</td>
+  </tr>
+  {% endif %}
   {% if object.created_at is not None %}
   <tr>
     <td>Created</td>
