--- a/schema/templates/schema/manufacturer_detail.html
+++ b/schema/templates/schema/manufacturer_detail.html
@@ -40,6 +40,12 @@
     <th colspan="2">Misc</th>
   </tr>
   {% if object.created_at is not None %}
+  {% if object.tags is not None %}
+  <tr>
+    <td>Tags</td>
+    <td>{{ object.tags.all|join:", " }}</td>
+  </tr>
+  {% endif %}
   <tr>
     <td>Created</td>
     <td>{{ object.created_at }}{% if object.created_by is not None %} by {{ object.created_by }}{% endif %}</td>
