--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -40,6 +40,12 @@
   <tr>
     <th colspan="2">Misc</th>
   </tr>
+  {% if object.tags is not None %}
+  <tr>
+    <td>Tags</td>
+    <td>{{ object.tags.all|join:", " }}</td>
+  </tr>
+  {% endif %}
   {% if object.created_at is not None %}
   <tr>
     <td>Created</td>
