Implement a tag browser

--- a/schema/templates/nav.html
+++ b/schema/templates/nav.html
@@ -30,6 +30,7 @@
                     <a class="dropdown-item" href="{% url 'negativesize-list' %}">Negative sizes</a>
                     <a class="dropdown-item" href="{% url 'paperstock-list' %}">Paper stocks</a>
                     <a class="dropdown-item" href="{% url 'process-list' %}">Processes</a>
+                    <a class="dropdown-item" href="{% url 'tag-list' %}">Tags</a>
                     <a class="dropdown-item" href="{% url 'toner-list' %}">Toners</a>
                 </div>
             </li>
