--- a/schema/templates/schema/toner_detail.html
+++ b/schema/templates/schema/toner_detail.html
@@ -30,7 +30,9 @@
   {% if object.tags is not None %}
   <tr>
     <td>Tags</td>
-    <td>{{ object.tags.all|join:", " }}</td>
+    <td>{% for tag in object.tags.all %}
+      <a class="btn btn-outline-primary" href="{% url 'tag-detail' tag|lower %}" role="button">{{ tag }}</a>
+      {% endfor %}</td>
   </tr>
   {% endif %}
   {% if object.created_at is not None %}
