--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -206,6 +206,15 @@
     <td><a href="{{ object.url }}">{{ object.url }}</a></td>
   </tr>
   {% endif %}
+  {% tags_for_object object as tag_list %}
+  {% if tag_list  %}
+  <tr>
+    <td>Tags</td>
+    <td>{% for tag in tag_list %}
+      <kbd>{{tag}}</kbd>
+      {% endfor %}</td>
+  </tr>
+  {% endif %}
   {% if object.created_at is not None %}
   <tr>
     <td>Created</td>
