--- a/schema/templates/schema/accessory_detail.html
+++ b/schema/templates/schema/accessory_detail.html
@@ -27,8 +27,8 @@
     <td>Cost</td>
     <td>{{ object.cost }}</td>
   </tr>
-  {% endif %
-  {% if object.lost is not None %}}
+  {% endif %}
+  {% if object.lost is not None %}
   <tr>
     <td>Lost</td>
     <td>{{ object.lost }}</td>
