--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -448,6 +448,15 @@
   {% endif %}
 </table>
 
+{% if related %}
+<h4>Similar camera models</h4>
+<ul>
+  {% for relateditem in related %}
+  <li><a href="{% url 'cameramodel-detail' relateditem.slug %}">{{ relateditem }}</a></li>
+  {% endfor %}
+</ul>
+{% endif %}
+
 {% if cameramodel.camera_set.all %}
 <h4>Cameras</h4>
 <table class="table table-hover">
