--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -62,6 +62,15 @@
   {% endif %}
 </table>
 
+{% if related %}
+<h4>Similar film stocks</h4>
+<ul>
+  {% for relateditem in related %}
+  <li><a href="{% url 'filmstock-detail' relateditem.slug %}">{{ relateditem }}</a></li>
+  {% endfor %}
+</ul>
+{% endif %}
+
 <a data-toggle="collapse" href="#collapseFilms" role="button" aria-expanded="false" aria-controls="collapseFilms">
   Films</a>
 <div class="collapse" id="collapseFilms">
