--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -62,6 +62,15 @@
   {% endif %}
 </table>
 
+{% if related %}
+<h4>Similar mounts</h4>
+<ul>
+  {% for relateditem in related %}
+  <li><a href="{% url 'mount-detail' relateditem.slug %}">{{ relateditem }}</a></li>
+  {% endfor %}
+</ul>
+{% endif %}
+
 <h5><a data-toggle="collapse" href="#collapseCameras" role="button" aria-expanded="false"
     aria-controls="collapseCameras">
     Camera models</a></h5>
