--- a/schema/templates/schema/toner_detail.html
+++ b/schema/templates/schema/toner_detail.html
@@ -48,4 +48,13 @@
   </tr>
   {% endif %}
 </table>
+
+{% if related %}
+<h4>Similar toners</h4>
+<ul>
+  {% for relateditem in related %}
+  <li><a href="{% url 'toner-detail' relateditem.slug %}">{{ relateditem }}</a></li>
+  {% endfor %}
+</ul>
+{% endif %}
 {% endblock %}
