--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -237,6 +237,7 @@
 </ul>
 {% endif %}
 
+{% if user.is_authenticated %}
 <a data-toggle="collapse" href="#collapseLenses" role="button" aria-expanded="false" aria-controls="collapseLenses">
   Lenses</a>
 <div class="collapse" id="collapseLenses">
@@ -253,6 +254,7 @@
     {% endfor %}
   </table>
 </div>
+{% endif %}
 {% endblock %}
 
 {% block moreactions %}
