Restyle as "in your collection"

--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -468,7 +468,7 @@
 
 {% if user.is_authenticated %}
 {% if cameramodel.camera_set.all %}
-<h4>Cameras</h4>
+<h4>In your collection</h4>
 <table class="table table-hover">
   <tr>
     <th>ID</th>
