--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -238,22 +238,21 @@
 {% endif %}
 
 {% if user.is_authenticated %}
-<a data-toggle="collapse" href="#collapseLenses" role="button" aria-expanded="false" aria-controls="collapseLenses">
-  Lenses</a>
-<div class="collapse" id="collapseLenses">
-  <table class="table table-hover">
-    <tr>
-      <th>Serial</th>
-      <th>Acquired</th>
-    </tr>
-    {% for lens in lensmodel.lens_set.all %}
-    <tr>
-      <td><code>{{ lens.serial }}</code></td>
-      <td>{{ lens.acquired }}</td>
-    </tr>
-    {% endfor %}
-  </table>
-</div>
+{% if lensmodel.lens_set.all %}
+<h4>In your collection</h4>
+<table class="table table-hover">
+  <tr>
+    <th>Serial</th>
+    <th>Acquired</th>
+  </tr>
+  {% for lens in lensmodel.lens_set.all %}
+  <tr>
+    <td><code>{{ lens.serial }}</code></td>
+    <td>{{ lens.acquired }}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endif %}
 {% endif %}
 {% endblock %}
 
