--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -487,7 +487,7 @@
   </tr>
   {% for camera in cameramodel.camera_set.all %}
   <tr>
-    <td><a href="{% url 'camera-detail' camera.id %}">#{{ camera.id }}</a></td>
+    <td><a href="{% url 'camera-detail' camera.id_owner %}">#{{ camera.id }}</a></td>
     <td>{{ camera.acquired }}</td>
     <td>{{ camera.cost }}</td>
     <td><code>{{ camera.serial }}</code></td>
