--- a/schema/templates/schema/repair_detail.html
+++ b/schema/templates/schema/repair_detail.html
@@ -5,13 +5,13 @@
   {% if object.camera is not None %}
   <tr>
     <td>Camera</td>
-    <td><a href="{% url 'camera-detail' object.camera.id %}">{{ object.camera }}</a></td>
+    <td><a href="{% url 'camera-detail' object.camera.id_owner %}">{{ object.camera }}</a></td>
   </tr>
   {% endif %}
   {% if object.lens is not None %}
   <tr>
     <td>Lens</td>
-    <td><a href="{% url 'lens-detail' object.lens.id %}">{{ object.lens }}</a></td>
+    <td><a href="{% url 'lens-detail' object.lens.id_owner %}">{{ object.lens }}</a></td>
   </tr>
   {% endif %}
   {% if object.date is not None %}
