Restrict "in my collection" context data to lenses we own

--- a/schema/templates/schema/lensmodel_detail.html
+++ b/schema/templates/schema/lensmodel_detail.html
@@ -246,7 +246,7 @@
       <th>Serial</th>
       <th>Acquired</th>
     </tr>
-    {% for lens in lensmodel.lens_set.all %}
+    {% for lens in mine %}
     <tr>
       <td><code>{{ lens.serial }}</code></td>
       <td>{{ lens.acquired }}</td>
