--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -467,7 +467,7 @@
 {% endif %}
 
 {% if user.is_authenticated %}
-{% if cameramodel.camera_set.all %}
+{% if mine %}
 <h4>Cameras</h4>
 <table class="table table-hover">
   <tr>
@@ -485,7 +485,7 @@
     <th>Condition</th>
     <th>Display lens</th>
   </tr>
-  {% for camera in cameramodel.camera_set.all %}
+  {% for camera in mine %}
   <tr>
     <td><a href="{% url 'camera-detail' camera.id_owner %}">#{{ camera.id }}</a></td>
     <td>{{ camera.acquired }}</td>
