Abstract out boolicon better and use it in list views

--- a/schema/templates/schema/archive_detail.html
+++ b/schema/templates/schema/archive_detail.html
@@ -1,5 +1,5 @@
 {% extends "detail.html" %}
-{% load yesnoicon %}
+{% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
@@ -31,7 +31,7 @@
   {% endif %}
   <tr>
     <td>Sealed</td>
-    <td>{{ object.sealed|yesnoicon }}</td>
+    <td>{{ object.sealed|boolicontag }}</td>
   </tr>
 </table>
 {% endblock %}
