--- a/schema/templates/schema/camera_detail.html
+++ b/schema/templates/schema/camera_detail.html
@@ -1,5 +1,5 @@
 {% extends "detail.html" %}
-{% load yesnoicon %}
+{% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
@@ -42,7 +42,7 @@
     {% if object.own is not None %}
     <tr>
         <td>Own</td>
-        <td>{{ object.own|yesnoicon }}</td>
+        <td>{{ object.own|boolicontag }}</td>
     </tr>
     {% endif %}
     {% if object.lens is not None %}
