--- a/schema/templates/schema/cameramodel_detail.html
+++ b/schema/templates/schema/cameramodel_detail.html
@@ -1,5 +1,5 @@
 {% extends "detail.html" %}
-{% load yesnoicon %}
+{% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
@@ -50,7 +50,7 @@
   {% if object.zoom is not None %}
   <tr>
     <td>Zoom</td>
-    <td>{{ object.zoom|yesnoicon }}</td>
+    <td>{{ object.zoom|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.min_focal_length is not None %}
@@ -105,7 +105,7 @@
   {% if object.rectilinear is not None %}
   <tr>
     <td>Rectilinear</td>
-    <td>{{ object.rectilinear|yesnoicon }}</td>
+    <td>{{ object.rectilinear|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.magnification is not None %}
@@ -229,7 +229,7 @@
   {% if object.metering is not None %}
   <tr>
     <td>Metering</td>
-    <td>{{ object.metering|yesnoicon }}</td>
+    <td>{{ object.metering|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.metering %}
@@ -294,13 +294,13 @@
   {% if object.bulb is not None %}
   <tr>
     <td>Bulb</td>
-    <td>{{ object.bulb|yesnoicon }}</td>
+    <td>{{ object.bulb|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.time is not None %}
   <tr>
     <td>Time</td>
-    <td>{{ object.time|yesnoicon }}</td>
+    <td>{{ object.time|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.shutter_speeds is not None %}
@@ -322,7 +322,7 @@
   {% if object.power_drive is not None %}
   <tr>
     <td>Power drive</td>
-    <td>{{ object.power_drive|yesnoicon }}</td>
+    <td>{{ object.power_drive|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.continuous_fps is not None %}
@@ -354,7 +354,7 @@
   {% if object.int_flash is not None %}
   <tr>
     <td>Internal flash</td>
-    <td>{{ object.int_flash|yesnoicon }}</td>
+    <td>{{ object.int_flash|boolicontag }}</td>
   </tr>
   <tr>
     <td>Internal flash guide number</td>
@@ -364,11 +364,11 @@
   {% if object.external_flash is not None %}
   <tr>
     <td>External flash</td>
-    <td>{{ object.ext_flash|yesnoicon }}</td>
+    <td>{{ object.ext_flash|boolicontag }}</td>
   </tr>
   <tr>
     <td>PC sync</td>
-    <td>{{ object.pc_sync|yesnoicon }}</td>
+    <td>{{ object.pc_sync|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.shoe is not None %}
@@ -386,7 +386,7 @@
   {% if object.flash_metering is not None %}
   <tr>
     <td>Flash metering</td>
-    <td>{{ object.flash_metering|yesnoicon }}</td>
+    <td>{{ object.flash_metering|boolicontag }}</td>
   </tr>
   {% endif %}
 
@@ -397,25 +397,25 @@
   {% if object.dof_preview is not None %}
   <tr>
     <td>DoF preview</td>
-    <td>{{ object.dof_preview|yesnoicon }}</td>
+    <td>{{ object.dof_preview|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.mirror_lockup is not None %}
   <tr>
     <td>Mirror lock-up</td>
-    <td>{{ object.mirror_lockup|yesnoicon }}</td>
+    <td>{{ object.mirror_lockup|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.tripod is not None %}
   <tr>
     <td>Tripod</td>
-    <td>{{ object.tripod|yesnoicon }}</td>
+    <td>{{ object.tripod|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.cable_release is not None %}
   <tr>
     <td>Cable release</td>
-    <td>{{ object.cable_release|yesnoicon }}</td>
+    <td>{{ object.cable_release|boolicontag }}</td>
   </tr>
   {% endif %}
 
