--- a/schema/templates/schema/filmstock_detail.html
+++ b/schema/templates/schema/filmstock_detail.html
@@ -1,5 +1,5 @@
 {% extends "detail.html" %}
-{% load yesnoicon %}
+{% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
@@ -22,13 +22,13 @@
   {% if object.colour is not None %}
   <tr>
     <td>Colour</td>
-    <td>{{ object.colour|yesnoicon }}</td>
+    <td>{{ object.colour|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.panchromatic is not None %}
   <tr>
     <td>Panchromatic</td>
-    <td>{{ object.panchromatic|yesnoicon}}</td>
+    <td>{{ object.panchromatic|boolicontag}}</td>
   </tr>
   {% endif %}
   {% if object.process is not None %}
