--- a/schema/templates/schema/lens_detail.html
+++ b/schema/templates/schema/lens_detail.html
@@ -1,5 +1,5 @@
 {% extends "detail.html" %}
-{% load yesnoicon %}
+{% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
@@ -48,7 +48,7 @@
   {% if object.own is not None %}
   <tr>
     <td>Own</td>
-    <td>{{ object.own|yesnoicon }}</td>
+    <td>{{ object.own|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.lost is not None %}
