--- a/schema/templates/schema/mount_detail.html
+++ b/schema/templates/schema/mount_detail.html
@@ -1,5 +1,5 @@
 {% extends "detail.html" %}
-{% load yesnoicon %}
+{% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
@@ -10,7 +10,7 @@
   {% if object.shutter_in_lens is not None %}
   <tr>
     <td>Shutter in lens</td>
-    <td>{{ object.shutter_in_lens|yesnoicon }}</td>
+    <td>{{ object.shutter_in_lens|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.type is not None %}
