--- a/schema/templates/schema/process_detail.html
+++ b/schema/templates/schema/process_detail.html
@@ -1,5 +1,5 @@
 {% extends "detail.html" %}
-{% load yesnoicon %}
+{% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
@@ -10,13 +10,13 @@
   {% if object.colour is not None %}
   <tr>
     <td>Colour</td>
-    <td>{{ object.colour|yesnoicon }}</td>
+    <td>{{ object.colour|boolicontag }}</td>
   </tr>
   {% endif %}
   {% if object.positive is not None %}
   <tr>
     <td>Positive</td>
-    <td>{{ object.positive|yesnoicon }}</td>
+    <td>{{ object.positive|boolicontag }}</td>
   </tr>
   {% endif %}
   <tr>
