--- a/schema/templates/schema/teleconverter_detail.html
+++ b/schema/templates/schema/teleconverter_detail.html
@@ -1,5 +1,5 @@
 {% extends "detail.html" %}
-{% load yesnoicon %}
+{% load boolicontag %}
 
 {% block content %}
 <table class="table table-hover">
@@ -34,7 +34,7 @@
   {% if object.multicoated is not None %}
   <tr>
     <td>Multicoated</td>
-    <td>{{ object.multicoated|yesnoicon }}</td>
+    <td>{{ object.multicoated|boolicontag }}</td>
   </tr>
   {% endif %}
 </table>
